[workspace]
resolver = "2"
members = [ "buffer" 
,"mime" 
,"oneone" 
,"protocol_traits"
,"zxc"
,"zxc-derive"
]

[workspace.dependencies]
bytes = "*"
criterion = "*"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
thiserror = { version = "2.0.17" }
tracing = { version = "0.1.41"}

# [profile.release]
# lto = true
# codegen-units = 1
# panic = "abort"
