[package]
name = "zxc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
buffer = { path = "../buffer" }
mime = { path = "../mime" }
oneone = { path = "../oneone" }
protocol_traits = { path = "../protocol_traits" }
zxc-derive = { path = "../zxc-derive" }

# workspace
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# crates
clap = { version = "4.5.56" , features = ["derive"] }
time = { version = "0.3.46", features = ["formatting"] }
toml = "0.9.11"
tracing-subscriber = { version = "0.3.22", features = ["local-time", "env-filter"] }
base64 = "0.22.1"
chrono = "0.4.43"
form_urlencoded = "1.2.2"
futures-util = "0.3.31"
http = "1.3.1"
openssl = { version = "0.10.75", features = ["vendored"] }
rcgen = { version = "0.13.2", features = ["pem", "x509-parser"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.13.1"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tokio-rustls = { version = "0.26.4"}
tokio-tungstenite = "0.28.0"
tokio-util = { version = "0.7.18", features = ["rt"] }
webpki-roots = "1.0.5"
wildcard = "0.3.0"
xattr = "1.6.1"

# console-subscriber = "0.4.0"
